--- a/免责声明.md
+++ b/免责声明.md
@@ -2,11 +2,10 @@
 
 **请务必认真阅读和理解本《免责声明》中规定的所有权利和限制。**
 
-Fake Location （以下简称“本软件”）是由 Lerist（联系方式：lerist.5@gmail.com ，以下简称“本软件作者”）开发的一款帮助开发人员调试位置信息的位置信息模拟工具。
+Fake Location （以下简称“本软件”）是由 Lerist（联系方式：lerist.5@gmail.com ，以下简称“本软件作者”）开发的一款帮助开发人员调试位置信息程序的模拟工具，用于实现对位置信息、WIFI信息以及设备开发环境的调试模拟。以下为本软件规定的所有权利及限制(共五条)：
 
-1. 本软件仅供开发人员调试使用，严禁用于一切侵权、侵害他人利益、违法等行为；使用本软件所造成的一切后果由用户自行承担。
-
-2. 用户不得对本程序进行反向工程（Reverse engineer）、反向编译（Decompile）、反汇编（Disassemble）或二次打包发布， 违者属于侵权行为，并自行承担由此产生的不利后果。
-
-3. 本软件本身保证不含任何病毒、木马等破坏用户数据的恶意代码，但是由于本软件产品可以通过网络等途径下载、传播， 对于从非软件作者指定站点下载的本软件产品，本软件作者无法保证其是否感染计算机病毒、是否隐藏有伪装的特洛伊木马程序或者黑客软件等恶意代码，本软件作者不承担由此引起的直接和间接损害责任。
-4. 由于用户计算机软硬件环境的差异性和复杂性，本软件所提供的各项功能并不能保证在任何情况下都能正常执行或达到用户所期望的结果， 用户使用本软件所产生的一切后果，本软件作者不承担任何责任。
+1. 本软件仅供开发人员调试使用；严禁用于一切侵权、侵害他人利益、违法等不当行为，本软件及本软件作者不予承担由此引起的直接和间接责任。
+2. 本软件其功能实现所依托的各项权限，都需经由用户手动同意授权后才允许使用，用户需提前了解设备系统各项权限的作用以及利弊，并自行决定是否授予本软件权限。
+3. 用户不得对本程序进行反向工程（Reverse engineer）、反向编译（Decompile）、反汇编（Disassemble）或二次打包发布，违者属于侵权行为，并自行承担由此产生的一切直接和间接后果。
+4. 本软件本身保证不含任何病毒、木马等破坏用户数据的恶意代码，但是由于本软件产品可以通过网络等途径下载、传播，对于从非本软件作者指定站点下载的本软件产品，本软件作者无法保证其是否感染计算机病毒、是否隐藏有伪装的特洛伊木马程序或者黑客软件等恶意代码，本软件及本软件作者不承担由此引起的直接和间接损害责任。
+5. 由于用户计算机软硬件环境的差异性和复杂性，本软件所提供的各项功能并不能保证在任何情况下都能正常执行或达到用户所期望的结果，本软件及本软件作者不予承担由此引起的直接和间接损害责任。
