--- a/免责声明.md
+++ b/免责声明.md
@@ -2,7 +2,7 @@
 
 **请务必认真阅读和理解本《免责声明》中规定的所有权利和限制。**
 
-Fake Location （以下简称“本软件”）是由 Lerist（联系方式：lerist.5@gmail.com ，以下简称“本软件作者”）开发的一款帮助开发人员调试位置信息程序的模拟工具，用于实现对位置信息、WIFI信息以及设备开发环境的调试模拟。以下为本软件规定的所有权利及限制(共五条)：
+Fake Location （以下简称“本软件”）是由 Lerist（联系方式：lerist.5@gmail.com ，以下简称“本软件作者”）开发的一款帮助开发人员调试位置信息程序的模拟工具，用于实现对位置信息、WIFI信息以及设备开发环境的调试模拟。以下为本软件规定的所有权利及限制：
 
 1. 本软件仅供开发人员调试使用；严禁用于一切侵权、侵害他人利益、违法等不当行为，本软件及本软件作者不予承担由此引起的直接和间接责任。
 2. 本软件其功能实现所依托的各项权限，都需经由用户手动同意授权后才允许使用，用户需提前了解设备系统各项权限的作用以及利弊，并自行决定是否授予本软件权限。
