--- a/免责声明.md
+++ b/免责声明.md
@@ -14,4 +14,4 @@
 <p>5. 由于用户计算机软硬件环境的差异性和复杂性，本软件所提供的各项功能不能保证在任何情况下都能正常执行或达到用户所期望的结果，本软件及本软件作者不予承担由此引起的直接和间接损害责任。</p>
 
 
-**`*` 若您(个人或企业)的权益因他人不当使用本软件以至受损，可联系开发者咨询应对措施或寻求帮助。**
+**`*` 若您(个人或企业)的权益因他人不当使用本软件以致受损，可联系开发者咨询应对措施或寻求帮助。**
