--- a/使用条款.md
+++ b/使用条款.md
@@ -15,7 +15,9 @@
 <p>6. 由于计算机软硬件环境的差异性和复杂性，本软件所提供的各项功能不能保证在任何情况下都能正常执行或达到您所期望的结果，本软件及本软件作者不予承担由此引起的直接和间接损害责任。</p>
 
 **`*` 由于这是一款工具型软件，无法完全甄别用户利害行为，若您(个人或企业)的权益因他人不当使用本软件以致受损，可联系开发者咨询应对措施或寻求帮助。**
-**        应对措施参考：**
-**          · ROOT模式：</strong>邮件联系本软件作者，说明权益受损原由和因何功能项所致，以及您的APP基本信息；待软件作者核实确认后将会为其配置功能限制。**
-**          · NOROOT模式：</strong>由于NOROOT模式权限有限，后台无法像ROOT模式一样对其配置功能限制，软件开发商可直接使用“Location.isFromMockProvider()”方法判断并过滤模拟数据。**
 
+**应对措施参考：**
+
+**· ROOT模式：邮件联系本软件作者，说明权益受损原由和因何功能项所致，以及您的APP基本信息；待软件作者核实确认后将会为其配置功能限制。**
+
+**· NOROOT模式：由于NOROOT模式权限有限，后台无法像ROOT模式一样对其配置功能限制，软件开发商可直接使用“Location.isFromMockProvider()”方法判断并过滤模拟数据。**
